--- a/TD4/exercice2/result.html
+++ b/TD4/exercice2/result.html
@@ -1,11 +1,53 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body><ul>
-  <li>Enfin pris ?</li>
-  <li>11'09''01</li>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>xml et xsl pour films : version tableau et templates</title>
+</head>
+<body>
+<h1>Liste des films de ma base</h1>
+<TABLE BORDER="1">
+<TR>
+<TD><strong>Titre</strong></TD>
+<TD><strong>Réalisateur</strong></TD>
+<TD><strong>Pays</strong></TD>
+<TD><strong>Genre</strong></TD>
+<TD><strong>Durée</strong></TD>
+</TR>
+  <TR><TD><b>Enfin pris ?</b></TD></TR>
+<TD><b>Carles</b></TD>
+<TD>France</TD>
+  <TR><TD><b>11'09''01</b></TD></TR>
+<TD><b>Makhmalbaf</b></TD>
+<TD><b>Lelouch</b></TD>
+<TD><b>Chahine</b></TD>
+<TD><b>Tanovic</b></TD>
+<TD><b>Ouedraogo</b></TD>
+<TD><b>Loach</b></TD>
+<TD><b>IÃ±Ã¡rritu</b></TD>
+<TD><b>Gitai</b></TD>
+<TD><b>Nair</b></TD>
+<TD><b>Penn</b></TD>
+<TD><b>Imamura</b></TD>
+<TD>France</TD>
 
-  <li>Last Party 2000</li>
-  <li>Sweet Sixteen</li>
+  <TR><TD><b>Last Party 2000</b></TD></TR>
+<TD><b>Chaiklin</b></TD>
+<TD><b>Leitch</b></TD>
+<TD>AmÃ©ricain</TD>
+  <TR><TD><b>Sweet Sixteen</b></TD></TR>
+<TD><b>Loach</b></TD>
+<TD>Britannique</TD>
 
-  <li>Le bruit, l'odeur et quelques Ã©toiles</li>
-  <li>Un monde presque paisible </li>
-  <li>Bloody Sunday</li>
-</ul></body></html>
+  <TR><TD><b>Le bruit, l'odeur et quelques Ã©toiles</b></TD></TR>
+<TD><b>Pittard</b></TD>
+<TD>France</TD>
+  <TR><TD><b>Un monde presque paisible </b></TD></TR>
+<TD><b>Deville</b></TD>
+<TD>France</TD>
+  <TR><TD><b>Bloody Sunday</b></TD></TR>
+<TD><b>Greengrass</b></TD>
+<TD>Anglo-irlandais</TD>
+</TABLE>
+</body>
+</html>
