--- a/TD4/exercice2/films.html
+++ b/TD4/exercice2/films.html
@@ -1,19 +1,112 @@
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>xml et xsl pour films</title>
+<title>xml et xsl pour films : version tableau et templates</title>
 </head>
 <body>
-<h1>Liste des films de ma base</h1>
-<ul>
-<li>Enfin pris ?</li>
-<li>11'09''01</li>
-<li>Last Party 2000</li>
-<li>Sweet Sixteen</li>
-<li>Le bruit, l'odeur et quelques &eacute;toiles</li>
-<li>Un monde presque paisible </li>
-<li>Bloody Sunday</li>
-</ul>
+<h1>Liste des 7 films de ma base</h1>
+<TABLE BORDER="1">
+<TR>
+<TD><strong> N&deg; </strong></TD><TD><strong>Titre</strong></TD><TD><strong>R&eacute;alisateur</strong></TD><TD><strong>Pays</strong></TD><TD><strong>Genre</strong></TD><TD><strong>Dur&eacute;e</strong></TD><TD><strong>Affiche</strong></TD>
+</TR>
+<TR>
+<TD>
+<center>
+<em>1</em>
+</center>
+</TD><TD><b>Enfin pris ?</b></TD><TD><b>Carles</b> Pierre<br>
+</TD><TD>France</TD><TD>Documentaire</TD><TD>
+<center>
+<em>1h30</em>
+</center>
+</TD><TD><a href="http://www.homme-moderne.org/enfinpris/images/affiche.gif"><img width="70" src="http://www.homme-moderne.org/enfinpris/images/affiche.gif"></a></TD>
+</TR>
+<TR>
+<TD>
+<center>
+<em>2</em>
+</center>
+</TD><TD><b>11'09''01</b></TD><TD><b>Makhmalbaf</b> Samira <br>
+<b>Lelouch</b> Claude<br>
+<b>Chahine</b> Youssef<br>
+<b>Tanovic</b> Danis<br>
+<b>Ouedraogo</b> Idrissa<br>
+<b>Loach</b> Ken<br>
+<b>I&ntilde;&aacute;rritu</b> Alejandro Gonz&aacute;les<br>
+<b>Gitai</b> Amos<br>
+<b>Nair</b> Mira<br>
+<b>Penn</b> Sean<br>
+<b>Imamura</b> Shohei<br>
+</TD><TD>France</TD><TD>Retour sur actualit&eacute;</TD><TD>
+<center>
+<em>2h10</em>
+</center>
+</TD><TD><a href="http://www.bacfilms.com/site/september11/11sept_aff.jpg"><img width="70" src="http://www.bacfilms.com/site/september11/11sept_aff.jpg"></a></TD>
+</TR>
+<TR>
+<TD>
+<center>
+<em>3</em>
+</center>
+</TD><TD><b>Last Party 2000</b></TD><TD><b>Chaiklin</b> Rebecca<br>
+<b>Leitch</b> Donovan<br>
+</TD><TD>Am&eacute;ricain</TD><TD>Documentaire</TD><TD>
+<center>
+<em>1h37</em>
+</center>
+</TD><TD><a href="http://img5.allocine.fr/acmedia/medias/nmedia/00/02/52/29/affiche.jpg"><img width="70" src="http://img5.allocine.fr/acmedia/medias/nmedia/00/02/52/29/affiche.jpg"></a></TD>
+</TR>
+<TR>
+<TD>
+<center>
+<em>4</em>
+</center>
+</TD><TD><b>Sweet Sixteen</b></TD><TD><b>Loach</b> Ken<br>
+</TD><TD>Britannique</TD><TD>r&eacute;alisme politique</TD><TD>
+<center>
+<em>1h46</em>
+</center>
+</TD><TD><a href="http://www.graindesel.ch/dataimages/Sweet.jpg"><img width="70" src="http://www.graindesel.ch/dataimages/Sweet.jpg"></a></TD>
+</TR>
+<TR>
+<TD>
+<center>
+<em>5</em>
+</center>
+</TD><TD><b>Le bruit, l'odeur et quelques &eacute;toiles</b></TD><TD><b>Pittard</b> Eric<br>
+</TD><TD>France</TD><TD>Drame</TD><TD>
+<center>
+<em>1h50</em>
+</center>
+</TD><TD><a href="http://medias.fluctuat.net/films-posters/8/8/886/le-bruit-l-odeur-et-quelques-etoiles/affiche-1-poster.jpg"><img width="70" src="http://medias.fluctuat.net/films-posters/8/8/886/le-bruit-l-odeur-et-quelques-etoiles/affiche-1-poster.jpg"></a></TD>
+</TR>
+<TR>
+<TD>
+<center>
+<em>6</em>
+</center>
+</TD><TD><b>Un monde presque paisible </b></TD><TD><b>Deville</b> Michel<br>
+</TD><TD>France</TD><TD>Com&eacute;die dramatique</TD><TD>
+<center>
+<em>1h33</em>
+</center>
+</TD><TD><a href="http://www.cine.ch/images/affiches/original/54916.jpg"><img width="70" src="http://www.cine.ch/images/affiches/original/54916.jpg"></a></TD>
+</TR>
+<TR>
+<TD>
+<center>
+<em>7</em>
+</center>
+</TD><TD><b>Bloody Sunday</b></TD><TD><b>Greengrass</b> Paul<br>
+</TD><TD>Anglo-irlandais</TD><TD>Drame</TD><TD>
+<center>
+<em>1h47</em>
+</center>
+</TD><TD><a href="http://a69.g.akamai.net/n/69/10688/v1/img5.allocine.fr/acmedia/medias/nmedia/00/02/53/19/affiche.jpg"><img width="70" src="http://a69.g.akamai.net/n/69/10688/v1/img5.allocine.fr/acmedia/medias/nmedia/00/02/53/19/affiche.jpg"></a></TD>
+</TR>
+</TABLE>
 </body>
 </html>
-    
