--- a/TD4/exercice2/result.html
+++ b/TD4/exercice2/result.html
@@ -1,53 +1,119 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>xml et xsl pour films : version tableau et templates</title>
 </head>
 <body>
 <h1>Liste des films de ma base</h1>
 <TABLE BORDER="1">
 <TR>
+<TD><strong>N°</strong></TD>
 <TD><strong>Titre</strong></TD>
 <TD><strong>Réalisateur</strong></TD>
 <TD><strong>Pays</strong></TD>
 <TD><strong>Genre</strong></TD>
 <TD><strong>Durée</strong></TD>
+<TD><strong>Affiche</strong></TD>
 </TR>
-  <TR><TD><b>Enfin pris ?</b></TD></TR>
-<TD><b>Carles</b></TD>
+<TR>
+<TD>1<br>
+</TD>
+<TD><b>Enfin pris ?</b></TD>
+<TD>
+<b>Carles</b> Pierre<br>
+</TD>
 <TD>France</TD>
-  <TR><TD><b>11'09''01</b></TD></TR>
-<TD><b>Makhmalbaf</b></TD>
-<TD><b>Lelouch</b></TD>
-<TD><b>Chahine</b></TD>
-<TD><b>Tanovic</b></TD>
-<TD><b>Ouedraogo</b></TD>
-<TD><b>Loach</b></TD>
-<TD><b>IÃ±Ã¡rritu</b></TD>
-<TD><b>Gitai</b></TD>
-<TD><b>Nair</b></TD>
-<TD><b>Penn</b></TD>
-<TD><b>Imamura</b></TD>
+<TD>Documentaire</TD>
+<TD>1h30</TD>
+<TD><IMG src="http://www.homme-moderne.org/enfinpris/images/affiche.gif" height="
+                100px
+            "></TD>
+</TR>
+<TR>
+<TD>2<br>
+</TD>
+<TD><b>11'09''01</b></TD>
+<TD>
+<b>Makhmalbaf</b> Samira <br><b>Lelouch</b> Claude<br><b>Chahine</b> Youssef<br><b>Tanovic</b> Danis<br><b>Ouedraogo</b> Idrissa<br><b>Loach</b> Ken<br><b>IÃ±Ã¡rritu</b> Alejandro GonzÃ¡les<br><b>Gitai</b> Amos<br><b>Nair</b> Mira<br><b>Penn</b> Sean<br><b>Imamura</b> Shohei<br>
+</TD>
 <TD>France</TD>
-
-  <TR><TD><b>Last Party 2000</b></TD></TR>
-<TD><b>Chaiklin</b></TD>
-<TD><b>Leitch</b></TD>
+<TD>Retour sur actualitÃ©</TD>
+<TD>2h10</TD>
+<TD><IMG src="https://m.media-amazon.com/images/M/MV5BMzkxMjI4MjYtNjYzMC00ZTE1LWJlNjAtNWIyYzU3Njc3ODRiXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg" height="
+                100px
+            "></TD>
+</TR>
+<TR>
+<TD>3<br>
+</TD>
+<TD><b>Last Party 2000</b></TD>
+<TD>
+<b>Chaiklin</b> Rebecca<br><b>Leitch</b> Donovan<br>
+</TD>
 <TD>AmÃ©ricain</TD>
-  <TR><TD><b>Sweet Sixteen</b></TD></TR>
-<TD><b>Loach</b></TD>
+<TD>Documentaire</TD>
+<TD>1h37</TD>
+<TD><IMG src="https://members.loria.fr/YBoniface/html/xml/file/LastParty2000.jpg" height="
+                100px
+            "></TD>
+</TR>
+<TR>
+<TD>4<br>
+</TD>
+<TD><b>Sweet Sixteen</b></TD>
+<TD>
+<b>Loach</b> Ken<br>
+</TD>
 <TD>Britannique</TD>
-
-  <TR><TD><b>Le bruit, l'odeur et quelques Ã©toiles</b></TD></TR>
-<TD><b>Pittard</b></TD>
+<TD>rÃ©alisme politique</TD>
+<TD>1h46</TD>
+<TD><IMG src="https://www.les400coups.org/affiches/bigger/sweetsixteen.jpg" height="
+                100px
+            "></TD>
+</TR>
+<TR>
+<TD>5<br>
+</TD>
+<TD><b>Le bruit, l'odeur et quelques Ã©toiles</b></TD>
+<TD>
+<b>Pittard</b> Eric<br>
+</TD>
 <TD>France</TD>
-  <TR><TD><b>Un monde presque paisible </b></TD></TR>
-<TD><b>Deville</b></TD>
+<TD>Drame</TD>
+<TD>1h50</TD>
+<TD><IMG src="http://fr.web.img5.acsta.net/c_215_290/medias/nmedia/00/02/54/16/affiche.jpg" height="
+                100px
+            "></TD>
+</TR>
+<TR>
+<TD>6<br>
+</TD>
+<TD><b>Un monde presque paisible </b></TD>
+<TD>
+<b>Deville</b> Michel<br>
+</TD>
 <TD>France</TD>
-  <TR><TD><b>Bloody Sunday</b></TD></TR>
-<TD><b>Greengrass</b></TD>
+<TD>ComÃ©die dramatique</TD>
+<TD>1h33</TD>
+<TD><IMG src="https://www.picclickimg.com/d/w1600/pict/353253428124_/AFFICHE-Un-Monde-Presque-Paisible-116x158cm.jpg" height="
+                100px
+            "></TD>
+</TR>
+<TR>
+<TD>7<br>
+</TD>
+<TD><b>Bloody Sunday</b></TD>
+<TD>
+<b>Greengrass</b> Paul<br>
+</TD>
 <TD>Anglo-irlandais</TD>
+<TD>Drame</TD>
+<TD>1h47</TD>
+<TD><IMG src="https://fr.web.img6.acsta.net/r_1920_1080/medias/nmedia/00/02/53/19/affiche.jpg" height="
+                100px
+            "></TD>
+</TR>
 </TABLE>
 </body>
 </html>
